Separate LyvEffectiveModelContext
Separate LyvEffectiveModelContext and create dedicated
LyvEffectiveModelContextFactory class.

Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>